--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist =
     py33-django{1.7,1.8}
     py34-django{1.7,1.8,1.9,1.10,1.11,2.0}
     py35-django{1.8,1.9,1.10,1.11,2.0}
+    py36-django{1.11,2.0}
 
 [testenv]
 deps =
